# LegacyOfVoid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: asserts.hpp  defines.hpp  engine.hpp  logger.hpp
engine/include/core/: Typedefs.hpp
engine/include/core/Errors/: ErrorMacros.hpp  Errors.hpp
engine/include/core/SystemOS/: Memory.hpp
engine/include/core/Templates/: SafeRefcount.hpp
engine/include/core/Variant/: Array.hpp  VariantDeepDuplicate.hpp
engine/include/core/application/: Application.hpp
engine/src/: engine.cpp
engine/src/core/Errors/: Errors.cpp
engine/src/core/application/: Application.cpp
src/: main.cpp
